--- a/markup/components/layout-default/layout-default.pug
+++ b/markup/components/layout-default/layout-default.pug
@@ -1,5 +1,5 @@
 doctype html
-html(class="no-js", lang="en")
+html(class="no-js loading", lang="en")
 
     include ../../../node_modules/bemto.pug/bemto
     include ../popup/popup
