--- a/markup/components/range-slider/range-slider.styl
+++ b/markup/components/range-slider/range-slider.styl
@@ -58,8 +58,12 @@
         font-size: 16px
         font-weight: 700
         background-color: transparent
-        initial-letter initial
+        letter-spacing initial
         text-align: right
+
+        &.js-grow-input
+            width: 22px
+
         +below(1024px)
             display: none
 
