--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -532,38 +532,38 @@ mixin user-fill-profile-5
                 +col(4)
                     +field
                         +field-label Incall
-                        +field-input(value="100 $").js-change-currency-el
+                        +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
                 +col(4)
                     +field
                         +field-label Outcall
-                        +field-input(value="150 $").js-change-currency-el
+                        +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
 
                 +col(4).grid__col_align_center
                     span.user-fill-profile__label 1 hour
                 +col(4)
                     +field
-                        +field-input(value="150 $").js-change-currency-el
+                        +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
                 +col(4)
                     +field
-                        +field-input(value="200 $").js-change-currency-el
+                        +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
 
                 +col(4).grid__col_align_center
                     span.user-fill-profile__label 2 hour
                 +col(4)
                     +field
-                        +field-input(value="200 $").js-change-currency-el
+                        +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
                 +col(4)
                     +field
-                        +field-input(value="250 $").js-change-currency-el
+                        +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
 
                 +col(4).grid__col_align_center
                     span.user-fill-profile__label Night
                 +col(4)
                     +field
-                        +field-input(value="300 $").js-change-currency-el
+                        +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
                 +col(4)
                     +field
-                        +field-input(value="350 $").js-change-currency-el
+                        +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
 
                 +col(4)
                     +button('button')._uppercase._bg_darkGrey._color_main.user-fill-profile__action Save & Exit
@@ -614,153 +614,153 @@ mixin user-fill-profile-7
             +grid
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 0) Classical Sex
-                    +add-input('classical-sex-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('classical-sex-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 1) Sex
-                    +add-input('sex-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('sex-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 2) Deep throating
-                    +add-input('deep-throating-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('deep-throating-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 3) Anal sex
-                    +add-input('sex-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('sex-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 4) BJ with condom
-                    +add-input('bj-with-condom-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('bj-with-condom-value', '0 $', '', 'text', 'js-change-currency-el js-currency-input')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 5) BJ in your car
-                    +add-input('bj-in-your-car-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('bj-in-your-car-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 6) Lesbian sex
-                    +add-input('lesbian-sex-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('lesbian-sex-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 7) Cunnilingus
-                    +add-input('cunnilingus-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('cunnilingus-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 8) Sex toys
-                    +add-input('sex-toys-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('sex-toys-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 9) Couples
-                    +add-input('classical-sex-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('classical-sex-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 10) BJ without condom
-                    +add-input('bj-without-condom-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('bj-without-condom-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 11) Cum on breast
-                    +add-input('on-breast-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('on-breast-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 12) Cum on face
-                    +add-input('cum-on-face-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('cum-on-face-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 13) Cum in mouth
-                    +add-input('cum-in-mount-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('cum-in-mount-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 14) Classical sex
-                    +add-input('classical-sex-value', '', '0 $', 'text', 'js-change-currency-el')
+                    +add-input('classical-sex-value', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
         .user-fill-profile__section
                 +heading._md Massage
                 +grid
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'massage', 1) Classic
-                        +add-input('massage-classic', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('massage-classic', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'massage', 2) Relaxing
-                        +add-input('massage-relaxing', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('massage-relaxing', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'massage', 3) Urological
-                        +add-input('massage-urogical', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('massage-urogical', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'massage', 4) Professional
-                        +add-input('massage-pro', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('massage-pro', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'massage', 5) Thai
-                        +add-input('massage-thai', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('massage-thai', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'massage', 6) Specific area
-                        +add-input('massage-specific', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('massage-specific', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'massage', 7) Erotic
-                        +add-input('massage-erotic', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('massage-erotic', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'massage', 8) Sakura
-                        +add-input('massage-sakura', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('massage-sakura', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
         .user-fill-profile__section
                 +heading._md Striptease
                 +grid
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'striptease', 1) Professional
-                        +add-input('striptease-pro', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('striptease-pro', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'striptease', 2) Amateur
-                        +add-input('striptease-amateur', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('striptease-amateur', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'striptease', 3) Hardcore Lesbi-show
-                        +add-input('striptease-hardcore-lesbi', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('striptease-hardcore-lesbi', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'striptease', 4) Soft Lesbi-show
-                        +add-input('striptease-soft-lesbi', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('striptease-soft-lesbi', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
         .user-fill-profile__section
                 +heading._md BDSM
                 +grid
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'bdsm', 1) Bandage
-                        +add-input('bdsm-bandage', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('bdsm-bandage', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'bdsm', 2) Games
-                        +add-input('bdsm-games', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('bdsm-games', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'bdsm', 3) Getting Whipped
-                        +add-input('bdsm-getting-whipped', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('bdsm-getting-whipped', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'bdsm', 4) Mistress
-                        +add-input('bdsm-smistresss', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('bdsm-smistresss', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'bdsm', 5) Softcore domination
-                        +add-input('bdsm-softcore-domination', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('bdsm-softcore-domination', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'bdsm', 6) Slave
-                        +add-input('bdsm-slaves', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('bdsm-slaves', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'bdsm', 7) Fetish
-                        +add-input('bdsm-fetish', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('bdsm-fetish', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'bdsm', 8) Trampling
-                        +add-input('bdsm-trampling', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('bdsm-trampling', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
         .user-fill-profile__section
                 +heading._md Extreme
                 +grid
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'extreme', 1) Strapon
-                        +add-input('extreme-strapon', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('extreme-strapon', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'extreme', 2) Golden rain, give
-                        +add-input('extreme-golden-rain', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('extreme-golden-rain', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'extreme', 3) Copro
-                        +add-input('extreme-copro', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('extreme-copro', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'extreme', 4) Anilingus
-                        +add-input('extreme-anilingus', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('extreme-anilingus', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'extreme', 5) Golden rain, receive
-                        +add-input('extreme-golden-rain-receive', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('extreme-golden-rain-receive', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'extreme', 6) Anal fisting
-                        +add-input('extreme-anal-fisting', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('extreme-anal-fisting', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'extreme-fisting', 7) Fisting
@@ -770,13 +770,13 @@ mixin user-fill-profile-7
                 +grid
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'other', 1) Role play
-                        +add-input('other-role-play', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('other-role-play', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'other', 2) Photo/Video
-                        +add-input('other-photo-video', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('other-photo-video', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
                     +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'other', 3) Escort
-                        +add-input('other-escort', '', '0 $', 'text', 'js-change-currency-el')
+                        +add-input('other-escort', '', '0 $', 'text', 'js-change-currency-el js-currency-input')
 
                 +col(4)
                     +button('button')._uppercase._bg_darkGrey._color_main.user-fill-profile__action Save & Exit
