--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -52,6 +52,7 @@ block content
             +demo-link('phone-number.html') 05/Registration_3,2
             +demo-link('registration-success.html') 05/Registration_3,4
             +demo-link('user-profile-feedbacks.html') 06/My_Profile
+            +demo-link('user-profile-no-model.html') 06/My_Profile (NO MODEL)
             +demo-link('user-profile-rate.html') 06/My_Profile
             +demo-link('user-profile-no-reviews.html') 06/My_Profile
             +demo-link('user-profile-rate-no-login.html') 06/My_Profile
