--- a/markup/components/dotted-dropdown/dotted-dropdown.styl
+++ b/markup/components/dotted-dropdown/dotted-dropdown.styl
@@ -49,9 +49,13 @@
         width: 236px
         display: none
         z-index 10
+        box-shadow 0 10px 40px rgba(29, 29, 29, .1)
 
-        .list__button:hover .list__text
-            color mainColor
+        .list__button:hover
+            background-color: #f7f7f7
+
+            .list__text
+                color mainColor
 
     &_pure
         & ^[0]__button
