--- a/markup/components/agency/agency.pug
+++ b/markup/components/agency/agency.pug
@@ -36,7 +36,16 @@ mixin agency(isEmpty)
                     +e.col._rating
                         +e.rating-label Rating
                         +rating(4)
-
+                            +rating-dropdown-item('Category 1')
+                                +rating(4)
+                            +rating-dropdown-item('Category 2')
+                                +rating(3)
+                            +rating-dropdown-item('Category 3')
+                                +rating(5)
+                            +rating-dropdown-item('Category 4')
+                                +rating(3)
+                            +rating-dropdown-item('Category 5')
+                                +rating(2)
                 +e.row._about
                     +heading About agency
                     +e.P.text Mon nom est Megan, cultivée, je suis la plus belle compagne aventureuse pour n’importe quelle occasion. im the perfect woman that can give you the satisfaction, if you need relax and massage, call me, im real naughty, clean and safety so my picture is recent and 100% real, i propose Full package series kiseessss call me baby
