--- a/markup/pages/model-list-search-result-los-angeles.pug
+++ b/markup/pages/model-list-search-result-los-angeles.pug
@@ -6,6 +6,16 @@ include ../components/image-bg/image-bg
 include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
 include ../components/select-city-popup/select-city-popup
+include ../components/filter/filter
+include ../components/popup-welcome/popup-welcome
+include ../components/select-city-popup/select-city-popup
+include ../components/profile-popup/profile-popup
+include ../components/profile-common-popup/profile-common-popup
+include ../components/profile-video-popup/profile-video-popup
+include ../components/profile-photo-popup/profile-photo-popup
+include ../components/auth-popup/auth-popup
+include ../components/map/map
+include ../components/model-map/model-map
 
 block header
     +header(null, null, 'all escorts')
@@ -14,9 +24,16 @@ block content
     +model-list('Los Angeles')
 
 block popups
+    +profile-popup
     +popup-welcome
-    +filter-extended
     +select-city-popup
+    +profile-video-popup
+    +profile-photo-popup
+    +auth-popup
+    +filter-extended
+    +profile-common-popup-call
+    +profile-common-popup-qr
+    +profile-common-popup-report
 
 block footer
     +footer
