--- a/markup/pages/model-map-agencies.pug
+++ b/markup/pages/model-map-agencies.pug
@@ -7,6 +7,16 @@ include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
 include ../components/select-city-popup/select-city-popup
 include ../components/model-map/model-map
+include ../components/filter/filter
+include ../components/popup-welcome/popup-welcome
+include ../components/select-city-popup/select-city-popup
+include ../components/profile-popup/profile-popup
+include ../components/profile-common-popup/profile-common-popup
+include ../components/profile-video-popup/profile-video-popup
+include ../components/profile-photo-popup/profile-photo-popup
+include ../components/auth-popup/auth-popup
+include ../components/map/map
+include ../components/model-map/model-map
 
 block header
     +header(true, null, 'all escorts', null, true)._map.no-shadow
@@ -16,8 +26,15 @@ block content
     +arrow-up
 
 block popups
+    +profile-popup
     +popup-welcome
     +select-city-popup
+    +profile-video-popup
+    +profile-photo-popup
+    +auth-popup
+    +profile-common-popup-call
+    +profile-common-popup-qr
+    +profile-common-popup-report
     +filter-extended(true)
 
 block scripts
