--- a/markup/components/model-info-popup/model-info-popup.pug
+++ b/markup/components/model-info-popup/model-info-popup.pug
@@ -18,11 +18,12 @@ mixin model-info-popup()
                 +short-info-content
                     +short-info-text En, Fr
 
-        +tags.__tags
-            +tags-item('model-list-search-result.html') Incall
-            +tags-item('model-list-search-result.html') Outcall
-            +tags-item('model-list-search-result.html') Pornstar
-            +tags-item('model-list-search-result.html') With Video
+        +e.tags
+            +tags
+                +tags-item('model-list-search-result.html') Incall
+                +tags-item('model-list-search-result.html') Outcall
+                +tags-item('model-list-search-result.html') Pornstar
+                +tags-item('model-list-search-result.html') With Video
 
         +e.A.action(href='#' data-popup-id='#profile-popup' data-action='show').js-toggle-popup View profile
         +close._top_right
