--- a/markup/components/model-preview/model-preview.pug
+++ b/markup/components/model-preview/model-preview.pug
@@ -1,5 +1,8 @@
 include ../model-common-info/model-common-info
 include ../close/close
+include ../rating/rating
+include ../short-info/short-info
+include ../tags/tags
 
 mixin model-preview(photos, name, age, price, isOnline)
     - var maxPhotosCount = 5
@@ -21,16 +24,34 @@ mixin model-preview(photos, name, age, price, isOnline)
             +e.pagination
             //- +e.button._prev
             //- +e.button._next
-            +e.breakinfo
-                +close._top_right
-                +e.row._top
-                    span On tour in Moscow
-                    != pugHelpers.Icon.call(locals, { iconName: 'plane', className: 'model-preview__plane', iconWidth: 14, iconHeight: 14 })
-                +e.row._bottom
-                    span 19 OCT - 29 DEC
 
         +e.footer
-            +model-common-info(name, age, price).__info
+            +e.popup
+                +e.breakinfo
+                    +e.row._top
+                        span On tour in Moscow
+                        != pugHelpers.Icon.call(locals, { iconName: 'plane', className: 'model-preview__plane', iconWidth: 14, iconHeight: 14 })
+                    +e.row._bottom
+                        span 19 OCT - 29 DEC
+                +model-common-info(name, age, price).__info
+                +e.fullinfo
+                    +rating(4).__rating
+                    +e.shortinfo
+                        +short-info
+                            +short-info-heading BDSM
+                            +short-info-content
+                                +short-info-text Independed
+                        +short-info
+                            +short-info-heading Languages
+                            +short-info-content
+                                +short-info-text En, Fr
+
+                    +tags.__tags
+                        +tags-item('model-list-search-result.html') Incall
+                        +tags-item('model-list-search-result.html') Outcall
+                        +tags-item('model-list-search-result.html') Pornstar
+                        +tags-item('model-list-search-result.html') With Video
+
             +e.actions
                 +e.DIV.action._info i
                 +e.A(href='#').action._profile View profile
