--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -111,6 +111,8 @@
             pointer-events: none
 
     &__info
+        position relative
+        z-index 30
         m-transition(background-color, border-color)
 
     &__footer
@@ -127,7 +129,7 @@
         background-color: #fff
         opacity: 0
         pointer-events none
-        m-transition(opacity, transform)
+        m-transition(all)
         z-index: 3
         transform: translate3d(0, 10px, 0) scale(.98)
 
@@ -221,15 +223,30 @@
             &-active
                 background-color rgba(mainColor, 1)
 
+
     &__breakinfo
         position: absolute
-        bottom: 0
+        top: 0
         left: 0
-        display: none
+        display: block
         width: 100%
         z-index: 25
         padding: 15px 17px
         background-color: darkGreyColor
+        m-transition(transform, opacity)
+        opacity: 0
+        pointer-events: none
+
+        ^[0]__popup.active &
+            transform: translateY(-100%)
+            opacity: 1
+            pointer-events: all
+
+    &__popup
+        m-transition(margin-top)
+
+        &.active
+            background-color #ffffff
 
     &__row
         display: flex
@@ -251,3 +268,23 @@
 
     &__plane
         fill: mainColor
+
+    &__fullinfo
+        background: #fff;
+        display none
+        m-transition(opacity)
+
+    &__rating
+        padding: 23px 30px 22px;
+        border-bottom: 1px solid borderColor
+        cursor: auto !important
+
+    &__shortinfo
+        display: flex
+        justify-content: space-between
+        padding: 22px 30px 18px;
+
+    &__tags
+        padding-left: 18px !important
+        padding-right: 18px
+        padding-bottom: 18px
