--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -246,7 +246,8 @@
         m-transition(margin-top)
 
         &.active
-            background-color #ffffff
+            * >
+                background-color #ffffff
 
     &__row
         display: flex
