--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -454,7 +454,7 @@ mixin user-fill-profile-4
                 +col(4)
                     +field
                         +field-label Phone
-                        +field-input(value='+1 818 554-9937')
+                        +field-input.js-phone-mask
                 +col(3).grid__col_push_bottom
                     +button('button')._uppercase._bg_main._color_white.user-fill-profile__action Edit
 
