--- a/markup/components/head/head.pug
+++ b/markup/components/head/head.pug
@@ -24,7 +24,7 @@ mixin head(data)
     link(rel="icon" type="image/x-icon" href="favicon.ico")
     script(src='%=static=%js/separate-js/jquery-3.2.1.min.js')
     script(src='%=static=%js/separate-js/markerclusterer.js')
-    script(src=`https://maps.googleapis.com/maps/api/js?key=AIzaSyCb75twxWdJqfiHIVuKVReb-39Yo1EFQUQ`)
+    script(src=`https://maps.googleapis.com/maps/api/js?key=AIzaSyCb75twxWdJqfiHIVuKVReb-39Yo1EFQUQ&libraries=places`)
     script(src='%=static=%js/separate-js/CustomGoogleMapMarker.js')
     script(src='%=static=%js/separate-js/CustomGoogleMapMarkerGroup.js')
     script.
