--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -505,7 +505,7 @@ mixin user-fill-profile-4
                     +col(6)
                         +field
                             +field-label Address
-                            +field-input Los Angeles
+                            +field-input(placeholder='').js-map-addr-input Los Angeles
                     +col(12)
                         +map(true)#user-fill-profile-map
 
@@ -804,7 +804,7 @@ mixin user-fill-profile-8
                                     +col(6)
                                         +field
                                             +field-label Address
-                                            +field-input Los Angeles
+                                            +field-input(placeholder='').js-map-addr-input Los Angeles
                                     +col(12)
                                         +map(true)#user-fill-profile-map
 
